--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "tabcontaineractions",
-  "widgetName": "TabContainerActions",
-  "version": "1.0.0",
-  "description": "Add MxActions on click of a tab, so you can show and hide the contents of the tabs onnot being shown",
-  "copyright": "Benjamin Griggs",
-  "author": "Benjamin Griggs",
-  "engines": {
-    "node": ">=14"
-  },
-  "license": "MIT",
-  "config": {
-    "projectPath": "../../",
-    "mendixHost": "http://localhost:8082",
-    "developmentPort": 3000
-  },
-  "packagePath": "mendix",
-  "scripts": {
-    "start": "pluggable-widgets-tools start:server",
-    "dev": "pluggable-widgets-tools start:web",
-    "build": "pluggable-widgets-tools build:web",
-    "lint": "pluggable-widgets-tools lint",
-    "lint:fix": "pluggable-widgets-tools lint:fix",
-    "prerelease": "npm run lint",
-    "release": "pluggable-widgets-tools release:web"
-  },
-  "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "~9.6.2",
-    "@types/big.js": "^6.0.2",
-    "@types/react": "~17.0.1",
-    "@types/react-dom": "~17.0.1"
-  },
-  "dependencies": {
-    "classnames": "^2.3.2"
-  }
+    "name": "tabcontaineractions",
+    "widgetName": "TabContainerActions",
+    "version": "1.0.0",
+    "description": "Add MxActions on click of a tab, so you can show and hide the contents of the tabs not being shown",
+    "copyright": "Benjamin Griggs",
+    "author": "Benjamin Griggs",
+    "engines": {
+        "node": ">=14"
+    },
+    "license": "MIT",
+    "config": {
+        "projectPath": "../../",
+        "mendixHost": "http://localhost:8082",
+        "developmentPort": 3000
+    },
+    "packagePath": "mendix",
+    "scripts": {
+        "start": "pluggable-widgets-tools start:server",
+        "dev": "pluggable-widgets-tools start:web",
+        "build": "pluggable-widgets-tools build:web",
+        "lint": "pluggable-widgets-tools lint",
+        "lint:fix": "pluggable-widgets-tools lint:fix",
+        "prerelease": "npm run lint",
+        "release": "pluggable-widgets-tools release:web"
+    },
+    "devDependencies": {
+        "@mendix/pluggable-widgets-tools": "~9.6.2",
+        "@types/big.js": "^6.0.2",
+        "@types/react": "~17.0.1",
+        "@types/react-dom": "~17.0.1"
+    },
+    "dependencies": {
+        "classnames": "^2.3.2"
+    }
 }
